# proxy_service/docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "localhost:8080",
     "basePath": "/v1/api",
     "paths": {
-        "/admin/customendpoints": {
+        "/admin/custom-endpoints": {
             "post": {
                 "description": "Create Custom Endpoint to redirect its requests to another endpoints",
                 "consumes": [
@@ -268,6 +268,70 @@
                 }
             }
         },
+        "/secure-login": {
+            "post": {
+                "description": "Authenticate user credentials and return a signed JWT",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login a user",
+                "parameters": [
+                    {
+                        "description": "Login payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.SecureLoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JWT token",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid JSON format",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized: invalid credentials",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Server error during token generation",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/{username}": {
             "delete": {
                 "description": "Delete an existing user account (admin only)",
@@ -490,12 +554,6 @@
             "description": "LoginRequest defines the expected request body for logging in.",
             "type": "object",
             "properties": {
-                "captchaId": {
-                    "type": "string"
-                },
-                "captchaSolution": {
-                    "type": "string"
-                },
                 "password": {
                     "type": "string"
                 },
@@ -536,6 +594,24 @@
                     "items": {
                         "$ref": "#/definitions/handlers.SwaggerRole"
                     }
+                }
+            }
+        },
+        "handlers.SecureLoginRequest": {
+            "description": "SecureL defines the expected request body for logging in.",
+            "type": "object",
+            "properties": {
+                "captchaId": {
+                    "type": "string"
+                },
+                "captchaSolution": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
