# proxy_service/handlers/custom_endpoints.go
@@ -79,7 +79,7 @@ type SwaggerCustomEndpoint struct {
 // @Failure      400      {object}  map[string]string  "Invalid JSON format"
 // @Failure      401      {object}  map[string]string  "Unauthorized: invalid credentials"
 // @Failure      500      {object}  map[string]string  "Server error during token generation"
-// @Router       /admin/customendpoints [post]
+// @Router       /admin/custom-endpoints [post]
 func CreateCustomEndpointHandler(dynamicGroup *gin.RouterGroup) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var req database.CustomEndpoint
